crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@175.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb '{\"c\": {\"a\": 0, \"b\":1}}' @? '$.** ? (@.a == 1 - +@.b)';"
---
SelectStmt@0..68
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..67
    Ident@7..12 "jsonb"
    Whitespace@12..13 " "
    AExpr@13..67
      TypeCast@13..37
        AConst@13..37
          Sconst@13..37 "'{\"c\": {\"a\": 0, \"b\":1}}'"
      Whitespace@37..38 " "
      Op@38..40 "@?"
      Whitespace@40..41 " "
      AConst@41..67
        Sconst@41..67 "'$.** ? (@.a == 1 - + ..."
  Ascii59@67..68 ";"

