crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@177.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb '[1,2,3]' @? '$ ? (+@[*] > +3)';"
---
SelectStmt@0..45
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..44
    Ident@7..12 "jsonb"
    Whitespace@12..13 " "
    AExpr@13..44
      TypeCast@13..22
        AConst@13..22
          Sconst@13..22 "'[1,2,3]'"
      Whitespace@22..23 " "
      Op@23..25 "@?"
      Whitespace@25..26 " "
      AConst@26..44
        Sconst@26..44 "'$ ? (+@[*] > +3)'"
  Ascii59@44..45 ";"

